Kubernetes/Yandex.Praktikum/Logging+Monitoring+Alerting/[template]_prometheus--debug.yaml
---
# Source: prometheus-student/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: std-017-033
spec:
  ports:
    - port: 9090
      protocol: TCP
  selector:
    app: prometheus
  sessionAffinity: None
  type: ClusterIP
---
# Source: prometheus-student/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: std-017-033
  labels:
    app: prometheus
    provider: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        co.elastic.logs/enabled: "true"
        co.elastic.logs/format: zap
        co.elastic.logs/timezone: Europe/Moscow
        co.elastic.logs/exclude_lines: skipping duplicate scrape target with identical labels;
    spec:
      terminationGracePeriodSeconds: 90
      restartPolicy: Always
      volumes:
      - name: timezone-moscow
        hostPath:
          path: /usr/share/zoneinfo/Europe/Moscow
      - name: config
        configMap:
          name: prometheus-conf
      - name: prometheus-rules
        configMap:
          name: prometheus-rules
      containers:
      - name: prometheus
        image: prom/prometheus
        args:
          - --config.file=/etc/prometheus/prometheus.yml
          - --web.enable-lifecycle
          - --log.level=debug
        ports:
          - containerPort: 9090
        volumeMounts:
        - name: prometheus-rules
          mountPath: /config/sausage-store.yaml
          subPath: sausage-store.yaml
        - name: timezone-moscow
          mountPath: /etc/localtime
          readOnly: true
        - name: config
          mountPath: /etc/prometheus/
          readOnly: true
        resources:
          limits:
            cpu: 1
            memory: 1Gi
---
# Source: prometheus-student/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: std-017-033
  labels:
    app: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "std-017-033-monitoring.k8s.praktikum-services.tech"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
